# GEN-AI-UI-Heuristics

./: .gitignore  Dockerfile.podman  HEURISTIC_EVALUATION_USER_GUIDE.md  PROJECT_SUMMARY.md  README.md  build-podman.ps1  build-podman.sh  podman-compose.yml  run_streamlit.bat  start_app.bat  start_app.ps1  stop-podman.ps1  stop-podman.sh  workflow-diagram.md
.hypothesis/constants/: a5c9d758131ba2a9
.kiro/specs/crawl-metrics-improvements/: design.md  requirements.md  tasks.md
.streamlit/: config.toml
GEN-AI-Heuristics/: .gitignore  ACCURACY_VALIDATION.md  Dockerfile  MODEL_COMPARISON_STAKEHOLDER.md  docker-compose.yml  html_generator.py  internal_report.py  main.py  metrics_tracker.py  packages.txt  pyproject.toml  requirements.txt  test_metrics_tracker.py
GEN-AI-Heuristics/.hypothesis/constants/: 62933b144df9182a  d851034a9f2c7816
jules-scratch/verification/: verify_features.py  verify_url_input.py
