[project]
name = "gen-ai-heuristics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "matplotlib>=3.10.6",
    "openai>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
